JBIDE-26602 - fix vm args when changing vm between j8 and j11
Signed-off-by: Rob Stryker <rob@oxbeef.net>