@@ -10,13 +10,8 @@
  ******************************************************************************/
 package org.jboss.ide.eclipse.as.core.server.internal.extendedproperties;
 
-import org.eclipse.core.runtime.CoreException;
-import org.eclipse.jdt.launching.IVMInstall;
 import org.eclipse.wst.server.core.IRuntime;
 import org.eclipse.wst.server.core.IServer;
-import org.jboss.ide.eclipse.as.core.server.IJBossServerRuntime;
-import org.jboss.ide.eclipse.as.core.util.RuntimeUtils;
-import org.jboss.tools.common.jdt.debug.JavaUtilities;
 
 public class Wildfly150DefaultLaunchArguments extends
 		Wildfly100DefaultLaunchArguments {
@@ -28,18 +23,7 @@ public class Wildfly150DefaultLaunchArguments extends
 	}
 
 	protected String getJava9VMArgs() {
-		String suffix = "";
-		try {
-			IJBossServerRuntime jbossRuntime = RuntimeUtils.checkedGetJBossServerRuntime(getRuntime());
-			IVMInstall vmInstall = jbossRuntime.getVM();
-			int[] versionIDs = JavaUtilities.getMajorMinor(JavaUtilities.getJavaVersionVMInstall(vmInstall));
-			if (versionIDs.length > 0 && versionIDs[0] >= 9) {
-				suffix = " --add-exports=java.base/sun.nio.ch=ALL-UNNAMED --add-exports=jdk.unsupported/sun.misc=ALL-UNNAMED --add-exports=jdk.unsupported/sun.reflect=ALL-UNNAMED --add-modules=java.se";
-			}
-		} catch (CoreException e) {
-			throw new RuntimeException(e);
-		}
-		return suffix;
+		return JBossEAP72DefaultLaunchArguments.getJava9VMArgsConditional(getRuntime());
 	}
 	
 	@Override
